src/app/footer/footer.component.scss
@import "../../sass/variables";
@import "../../sass/mixin";

.footer {
  position: absolute;
  background-color: $color-priority;
  display: flex;
  justify-content: center;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  img {
    margin: 15px;
    width: 45px;
  }
}

